# hermes-skills

./: .gitignore  README.md
apple/macos-computer-use/: SKILL.md
autonomous-ai-agents/claude-code/: SKILL.md
autonomous-ai-agents/codex/: SKILL.md
autonomous-ai-agents/coding-agent-providers/: SKILL.md
autonomous-ai-agents/dispatching-parallel-agents/: SKILL.md
autonomous-ai-agents/hermes-agent/: SKILL.md
autonomous-ai-agents/hermes-cc-codex-collaboration/: SKILL.md
autonomous-ai-agents/opencode/: SKILL.md
autonomous-ai-agents/opencode-mimo/: SKILL.md
backtesting-frameworks/: SKILL.md
backtesting-frameworks/references/: a-share-data-sources.md  a-share-scoring-engine-integration.md  backtest-report-generation.md  comparison-backtest-pattern.md  explaining-backtests.md  multi-layer-scoring-engine.md
c-code-review/: SKILL.md
creative/ai-sprite-generation/: SKILL.md
creative/algorithmic-art/: SKILL.md
creative/brand-guidelines/: SKILL.md
creative/canvas-design/: SKILL.md
creative/draw-things-api/: SKILL.md
creative/draw-things-integration/: SKILL.md
creative/frontend-design/: SKILL.md
creative/handwrite-pdf-rendering/: SKILL.md
creative/slack-gif-creator/: SKILL.md
creative/theme-factory/: SKILL.md
creative/web-design-guidelines/: SKILL.md
data-science/jupyter-live-kernel/: SKILL.md
devops/ci-cd-and-automation/: SKILL.md
devops/deploy-to-vercel/: SKILL.md
devops/embedded-hw-sw-gap-analysis/: SKILL.md
devops/hermes-git-upgrade-with-patches/: SKILL.md
devops/openwebui-config-management/: SKILL.md
docx/: SKILL.md
docx/references/: homework_docx_template.js
domain/macos-network-audit/: SKILL.md
embedded-instrument-ui/: SKILL.md
embedded-instrument-ui/references/: data-attribute-consistency.md  status-bar-pattern.md
embedded-signal-processing/embedded-lvgl-gui/: SKILL.md
embedded-signal-processing/embedded-lvgl-gui/templates/: CMakeLists.txt  toolchain-rk3568.cmake
embedded-signal-processing/signal-processing/: SKILL.md
embedded/embedded-lvgl/: SKILL.md
embedded/lvgl-development/: SKILL.md
embedded/lvgl-development/templates/: CMakeLists.txt  main_sdl2_template.c
embedded/lvgl-embedded-ui/: SKILL.md
embedded/lvgl-embedded-ui/templates/: CMakeLists.txt
finance/quant-factor-investing/: SKILL.md
finance/stocks/: SKILL.md
fitness/body-recomposition/: SKILL.md
fitness/fitness-science/: SKILL.md
github/codebase-inspection/: SKILL.md
github/github-auth/: SKILL.md
github/github-repo-management/: SKILL.md
hermes/hermes-operations/: SKILL.md
hermes/hermes-session-lifecycle-debugging/: SKILL.md
hermes/post-task-reflection/: SKILL.md
hermes/smart-model-switch/: SKILL.md
html-to-pdf-macos/: SKILL.md
html-to-pdf-macos/references/: resume-workflow.md
lark-cli-pitfalls/: SKILL.md
lark-cli-pitfalls/references/: bitable-permission-scopes.md  feishu-cli-capability-map.md  lark-base-raw-api-field-types.md  wiki-to-base-token-resolution.md
mcp/native-mcp/: SKILL.md
media/douyin-video-transcription/: SKILL.md
media/youtube-content/: SKILL.md
msvc-lvgl-build/: SKILL.md
msvc-lvgl-build/references/: gui-guider-build-command.md  gui-guider-event-fixes.md  new-gui-compile-traps.md
note-taking/obsidian/: SKILL.md
pdf/: SKILL.md
pdf/references/: fpdf2_guide.md  homework_pdf_template.py  reportlab_technical_doc.md
productivity/anything-to-notebooklm/: SKILL.md
productivity/autonomous-task-paradigms/: SKILL.md
productivity/course-assignments/: SKILL.md
productivity/cron-skill-recommendation/: SKILL.md  skill_records.json
productivity/doc-coauthoring/: SKILL.md
productivity/feishu-message-format/: SKILL.md
productivity/focuspaw-report/: SKILL.md
productivity/graduate-school-research/: SKILL.md
productivity/humanize-ai-text/: SKILL.md
productivity/internal-comms/: SKILL.md
productivity/macos-file-forensics/: SKILL.md
productivity/maps/: SKILL.md
productivity/project-feasibility-analysis/: SKILL.md
productivity/psych-nlp-assessment/: SKILL.md
productivity/psychological-agent-modeling/: SKILL.md
productivity/resume-verification-workflow/: SKILL.md
research/academic-data-enrichment/: SKILL.md
research/ai-technique-evaluation/: SKILL.md
research/bazi-chart-analysis/: SKILL.md
research/hermes-arxiv-agent/: SKILL.md
research/hermes-arxiv-agent-deploy/: SKILL.md
research/llm-ensemble-methods/: SKILL.md
research/multi-model-strategies/: SKILL.md
research/offensive-osint/: SKILL.md
research/osint-conflict-maps/: SKILL.md
software-development/claude-api/: SKILL.md
software-development/composition-patterns/: SKILL.md
software-development/context-loss-debug/: SKILL.md
software-development/embedded-c-code-review/: SKILL.md
software-development/embedded-gui-development/: SKILL.md
software-development/embedded-gui-development/templates/: CMakeLists.txt  main.c  sdl2_display.c
software-development/embedded-lvgl-arm/: SKILL.md
software-development/embedded-signal-filter/: SKILL.md
software-development/embedded-ui-html-prototype/: SKILL.md
software-development/find-skills/: SKILL.md
software-development/html-prototype-embedded-ui/: SKILL.md
software-development/lvgl-embedded-gui/: SKILL.md
software-development/lvgl-embedded-linux/: SKILL.md
software-development/lvgl-embedded-porting/: SKILL.md
software-development/lvgl-v9-bug-patterns/: SKILL.md
software-development/lvgl-v9-development/: SKILL.md
software-development/mcp-builder/: SKILL.md
software-development/plan/: SKILL.md
software-development/qoder-skills-audit/: SKILL.md
software-development/react-best-practices/: SKILL.md
software-development/react-native-skills/: SKILL.md
software-development/react-view-transitions/: SKILL.md
software-development/skill-creator/: SKILL.md
software-development/stripe-best-practices/: SKILL.md
software-development/systematic-debugging/: SKILL.md
software-development/ui-localization/: SKILL.md
software-development/vercel-optimize/: SKILL.md
windows-service-management/: SKILL.md
xlsx/: SKILL.md
(+199 files in other folders)
